[fix] Home: hide map if pod does not serve shapes [fix] Home: Fix CSS layout on small screen

--- a/scss/cesium.app.scss
+++ b/scss/cesium.app.scss
@@ -760,9 +760,6 @@ html, body {
     background-image: url('../img/logo_64px.png');
     background-size: 64px 64px;
   }
-  #home .footer {
-    display: none;
-  }
 }
 
 @media screen and (min-width: $screen-sm) and (max-width: $screen-sm-max) {
@@ -776,7 +773,7 @@ html, body {
     margin-top: 20px;
   }
   #home .row{
-    max-width: 350px;
+    display: block;
   }
 }
 
